// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <KeepAlive /> 1`] = `
<div>
  <div>
    <!--keep-alive-af4509-->
    <div>
      <div
        data-testid="count"
      >
        0
      </div>
      <button
        data-testid="counterAdd"
      >
        +
      </button>
    </div>
    <!--keep-alive-af4509-->
    <button
      data-testid="toggle"
    >
      toggle
    </button>
  </div>
</div>
`;

exports[`Test <KeepAlive /> 2`] = `
<div>
  <div>
    <!--keep-alive-af4509-->
    <div>
      <div
        data-testid="count"
      >
        1
      </div>
      <button
        data-testid="counterAdd"
      >
        +
      </button>
    </div>
    <!--keep-alive-af4509-->
    <button
      data-testid="toggle"
    >
      toggle
    </button>
  </div>
</div>
`;

exports[`Test <KeepAlive /> 3`] = `
<div>
  <div>
    <button
      data-testid="toggle"
    >
      toggle
    </button>
  </div>
</div>
`;

exports[`Test <KeepAlive /> 4`] = `
<div>
  <div>
    <!--keep-alive-af4509-->
    <div>
      <div>
        <div
          data-testid="count"
        >
          1
        </div>
        <button
          data-testid="counterAdd"
        >
          +
        </button>
      </div>
    </div>
    <!--keep-alive-af4509-->
    <button
      data-testid="toggle"
    >
      toggle
    </button>
  </div>
</div>
`;
